# Projetos-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  arquivo.txt  contestacao.txt  exe  executavel  main  main.c  myprogram  usuarios.txt  utils.c  utils.h
BD/: BD.txt  db.sqlite3
BD/Usuarios/: U1.txt  U2.txt
executables/: executables.txt
